        * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
        * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
        * [BUGFIX]: Valid objects in SQL editor are now highlighted and are Ctrl+clickable (the feature was there, but was broken and it didn't work).

[3.0.1]
        * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
        * [ADDED]: Implemented support for immediate editing of rows just added to the WITHOUT ROWID tables (previously the manual refresh of data view was required).
        * [BUGFIX]: Fixed support for expressions as DEFAULT value in table.
        * [BUGFIX]: Fixed support under Windows for running portable distribution, while having different version of Qt installed in the system (added the qt.conf file).

[3.0.0]
        * [ADDED]: Application has been rewritten from scratch in C++ and Qt (was previously written in Tcl/Tk). This means improvements in all areas, especially in application performance, good looking interface, more friendly interface and more stability.
        * [ADDED]: Database list can now group databases in named groups (groups can be embedded in each other).
        * [ADDED]: Changes made to database schema (modifying/adding/dropping tables, indexes, etc) are now confirmed with user by a DDL dialog (can be disabled).
        * [ADDED]: Form View for data is now configurable and extensible (with plugins). You can configure which editors you want to make available for which data type.
        * [ADDED]: Custom collation editor window, so you can implement custom collations using any scripting language available in SQLiteStudio