@@ -5,6 +5,8 @@
         * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
         * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
         * [BUGFIX]: Valid objects in SQL editor are now highlighted and are Ctrl+clickable (the feature was there, but was broken and it didn't work).
+        * [BUGFIX]: Fixed invalid 'modified' status when focusing out NumberMultiEditor in FormView, resulting in uncommited change on FormView, even there was no change.
+        * [BUGFIX]: #2698 Fixed double precision numbers displaying in the Grid View.
 
 [3.0.1]
         * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
